<?xml version="1.0"?>

<!--
SPDX-FileCopyrightText: Copyright (c) 2023-2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

SPDX-License-Identifier: Apache-2.0
-->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_data_recorder</name>
  <version>3.0.0</version>
  <description>
    Package to record sensor data in Isaac ROS
  </description>

  <maintainer email="ayusmans@nvidia.com">Ayusman Saha</maintainer>

  <license>Copyright (c) 2023-2024, NVIDIA CORPORATION. All rights reserved.
    NVIDIA CORPORATION and its licensors retain all intellectual property
    and proprietary rights in and to this software, related documentation
    and any modifications thereto.  Any use, reproduction, disclosure or
    distribution of this software and related documentation without an express
    license agreement from NVIDIA CORPORATION is strictly prohibited.</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>

  <exec_depend>sllidar_ros2</exec_depend>

  <exec_depend>nova_carter_description</exec_depend>
  <exec_depend>nova_developer_kit_description</exec_depend>
  <exec_depend>isaac_ros_h264_encoder</exec_depend>
  <exec_depend>isaac_ros_correlated_timestamp_driver</exec_depend>
  <exec_depend>isaac_ros_hawk</exec_depend>
  <exec_depend>isaac_ros_owl</exec_depend>
  <exec_depend>isaac_ros_hesai</exec_depend>
  <exec_depend>isaac_ros_imu_bmi088</exec_depend>
  <exec_depend>isaac_ros_data_validation</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
